<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="#fff"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#0063DA">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal">
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_1"
                android:layout_width="wrap_content"
                android:background="@drawable/background_btn"
                android:layout_height="70dp"
                android:textSize="40sp"
                android:onClick="btnClick"
                android:layout_marginEnd="3dp"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_2"
                android:layout_width="wrap_content"
                android:onClick="btnClick"
                android:textSize="40sp"
                android:background="@drawable/background_btn"
                android:layout_height="70dp"
                android:layout_marginEnd="3dp"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_3"
                android:layout_width="wrap_content"
                android:onClick="btnClick"
                android:textSize="40sp"
                android:background="@drawable/background_btn"
                android:layout_height="70dp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="70dp"
            android:layout_marginTop="3dp"
            android:orientation="horizontal">
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_4"
                android:layout_width="wrap_content"
                android:onClick="btnClick"
                android:textSize="40sp"
                android:background="@drawable/background_btn"
                android:layout_height="70dp"
                android:layout_marginEnd="3dp"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_5"
                android:layout_width="wrap_content"
                android:onClick="btnClick"
                android:textSize="40sp"
                android:background="@drawable/background_btn"
                android:layout_height="70dp"
                android:layout_marginEnd="3dp"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_6"
                android:layout_width="wrap_content"
                android:onClick="btnClick"
                android:textSize="40sp"
                android:background="@drawable/background_btn"
                android:layout_height="70dp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="70dp"
            android:layout_marginTop="3dp"
            android:orientation="horizontal">
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_7"
                android:textSize="40sp"
                android:layout_width="wrap_content"
                android:onClick="btnClick"
                android:background="@drawable/background_btn"
                android:layout_height="70dp"
                android:layout_marginEnd="3dp"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_8"
                android:textSize="40sp"
                android:layout_width="wrap_content"
                android:onClick="btnClick"
                android:background="@drawable/background_btn"
                android:layout_height="70dp"
                android:layout_marginEnd="3dp"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_9"
                android:textSize="40sp"
                android:layout_width="wrap_content"
                android:onClick="btnClick"
                android:background="@drawable/background_btn"
                android:layout_height="70dp"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="100dp"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_player_1"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="70dp"
            android:text="@string/pl_1"
            android:textSize="23sp"
            android:background="@drawable/btn_back"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_player_2"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textSize="23sp"
            android:text="@string/pl_2"
            android:layout_height="70dp"
            android:background="@drawable/btn_back"
            android:layout_marginEnd="20dp"
            />
    </LinearLayout>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_restart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="#6F9AF1"
        android:background="@drawable/btn_back"
        android:text="@string/restart"
        android:textSize="20sp"
        android:textAllCaps="false"
        android:layout_marginStart="30dp"
        android:layout_gravity="start"/>
</LinearLayout>